Update extension json

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,10 @@
         "esbenp.prettier-vscode",
         "vscodevim.vim",
         "fisheva.eva-theme",
-        "mvllow.rose-pine"
+        "mvllow.rose-pine",
+        "teabyii.ayu",
+        "Equinusocio.vsc-material-theme",
+        "wicked-labs.wvsc-serendipity",
+        "sdras.inbedby7pm"
     ]
 }
